# GLog

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  assets.qrc  main.cpp
.github/workflows/: cmake-multi-platform.yml
adif/: AdifBoolean.cpp  AdifBoolean.h  AdifCharacter.cpp  AdifCharacter.h  AdifCommaList.h  AdifCreditList.cpp  AdifCreditList.h  AdifDataBase.cpp  AdifDataBase.h  AdifDataTypes.h  AdifDate.cpp  AdifDate.h  AdifDigit.cpp  AdifDigit.h  AdifEnumTypes.cpp  AdifEnumTypes.h  AdifFreqBandFactory.cpp  AdifFreqBandFactory.h  AdifGeneral.cpp  AdifGeneral.h  AdifGridSquare.cpp  AdifGridSquare.h  AdifGridSquareExt.cpp  AdifGridSquareExt.h  AdifGridSquareList.cpp  AdifGridSquareList.h  AdifIOTARefNo.cpp  AdifIOTARefNo.h  AdifInteger.cpp  AdifInteger.h  AdifIntlCharacter.cpp  AdifIntlCharacter.h  AdifIntlMultilineString.cpp  AdifIntlMultilineString.h  AdifIntlString.cpp  AdifIntlString.h  AdifLocation.cpp  AdifLocation.h  AdifModeFactory.cpp  AdifModeFactory.h  (+23 more)
adif/constants/: adif_config.py  adif_constants.h  adif_field_map.h  ant_path_map.h  arrl_section_map.h  award_map.h  award_sponsor_map.h  band_map.h  contest_id_map.h  continent_map.h  credit_map.h  dxcc_map.h  eqsl_ag_map.h  gen_field_map.py  mode_map.h  morse_key_map.h  parse_ant_path.py  parse_arrl_section.py  parse_award.py  parse_award_sponsor.py  parse_band.py  parse_contest_id.py  parse_continent.py  parse_credit.py  parse_dxcc.py  parse_eqsl_ag.py  parse_mode.py  parse_morse_key.py  parse_propagation.py  parse_qsl_medium.py  parse_qsl_rcvd.py  parse_qsl_sent.py  parse_qsl_via.py  parse_qso_complete.py  parse_qso_download_status.py  parse_qso_upload_status.py  parse_region.py  parse_submode.py  propagation_map.h  qsl_medium_map.h  (+9 more)
cmake/: GLogKitConfig.cmake.in
doc/: README.md  architecture.md  contributing.md  data-model-and-sqlite.md  parser-and-adif.md  plugins.md
gui/: AddQSODialog.cpp  AddQSODialog.h  AddQSODialog.ui  AwardPluginManager.cpp  AwardPluginManager.h  AwardPluginManager.ui  ConfigureCtyDialog.cpp  ConfigureCtyDialog.h  ConfigureCtyDialog.ui  DuplicatesManager.cpp  DuplicatesManager.h  DuplicatesManager.ui  GLogApplication.cpp  GLogApplication.h  GLogApplication.ui  MapGraphicsView.cpp  MapGraphicsView.h  MapWidget.cpp  MapWidget.h  MapWidget.ui  SearchBar.cpp  SearchBar.h  SearchBar.ui
include/GLogKit/: IGRecord.h  app_export.h  award_plugin.h  safe_logger.h
linux-deploy/: Dockerfile  GLog.desktop  GLogKit.desktop  appimage-in-docker.sh  linux-deploy.sh  qt-env.sh  workflow.sh
model/: CMakeLists.txt  adif_serialization.cpp  adif_serialization.h  adifdb.cpp  adifdb.h  adiffile_service.cpp  adiffile_service.h  adifparse_service.cpp  adifparse_service.h  award_entity_count_report.cpp  award_entity_count_report.h  ctydb.cpp  ctydb.h  duplicatesmodel.cpp  duplicatesmodel.h  fccdb.cpp  fccdb.h  mode_map.h  parse_mode.py  record.cpp  record.h  recorddao.cpp  recorddao.h  recordrepository.cpp  recordrepository.h
parser/: CMakeLists.txt  driver.hpp  driver_batch.hpp  driver_impl.hpp  driver_inter.hpp  glog.l  glog.y  glogparser.h  ilexer.hpp  parserdriver.h
plugins/was_plugin/: CMakeLists.txt  was_plugin.cpp  was_plugin.h
scripts/: Generate-LlvmCoverage.ps1  Generate-TestCoverage.ps1
tests/: .clang-tidy  CMakeLists.txt  adif_stress_generator.hpp  ctydb_test.cpp  hello_ctest.cpp  test_utils.h  tst_addqsodialog.cpp  tst_adif_creditlist.cpp  tst_adif_enumtypes.cpp  tst_adif_freqbandfactory.cpp  tst_adif_iotarefno.cpp  tst_adif_serialization.cpp  tst_adifboolean.cpp  tst_adifcharacter.cpp  tst_adifdatatypes.cpp  tst_adifdate.cpp  tst_adifdigit.cpp  tst_adiffile_service.cpp  tst_adifgridsquare.cpp  tst_adifgridsquareext.cpp  tst_adifgridsquarelist.cpp  tst_adifinteger.cpp  tst_adifintlcharacter.cpp  tst_adifintlmultilinestring.cpp  tst_adifintlstring.cpp  tst_adiflocation.cpp  tst_adifmodel.cpp  tst_adifmodesubmode.cpp  tst_adifmultilinestring.cpp  tst_adifnumber.cpp  tst_adifpositiveinteger.cpp  tst_adifpotaref.cpp  tst_adifpotareflist.cpp  tst_adifsotaref.cpp  tst_adifstring.cpp  tst_adiftime.cpp  tst_adifwwffref.cpp  tst_award_entity_count_report.cpp  tst_awardpluginmanager.cpp  tst_concurrent.cpp  (+12 more)
tools/: CMakeLists.txt  CaseInsensitiveLess.h  Concurrent.h  DropAbleTableView.cpp  DropAbleTableView.h  GCommandLineParser.cpp  GCommandLineParser.h  GHeaderView.cpp  GHeaderView.h  GlobalNetwork.cpp  GlobalNetwork.h  LoadedAwardPlugin.h  MapGraphicsView.cpp  MapGraphicsView.h  MultiLineDelegate.cpp  MultiLineDelegate.h  SqliteDbExecutor.cpp  SqliteDbExecutor.h  StdinReader.cpp  StdinReader.h  Synchronize.h  app_export.h
